--- a/approot/package.json
+++ b/approot/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "helloworld",
-  "version": "1.0.0",
-  "dependencies": {
-    "express": "2.0.0",
-    "underscore": ""
-  }
+	"name" : "maurerdotme",
+	"version" : "0.0.1",
+	"dependencies" : {
+		"express" : "latest",
+		"jade" : "latest",
+		"node-markdown" : "latest"
+	}
 }
