--- a/approot/package.json
+++ b/approot/package.json
@@ -4,6 +4,7 @@
 	"dependencies" : {
 		"express" : "latest",
 		"jade" : "latest",
-		"node-markdown" : "latest"
+		"node-markdown" : "latest",
+		"request" : "latest"
 	}
 }
