Reorg of code and got photos working

--- a/approot/package.json
+++ b/approot/package.json
@@ -5,6 +5,7 @@
 		"express" : "latest",
 		"jade" : "latest",
 		"node-markdown" : "latest",
-		"request" : "latest"
+		"request" : "latest",
+		"async" : "latest"
 	}
 }
