--- a/approot/package.json
+++ b/approot/package.json
@@ -6,6 +6,7 @@
 		"jade" : "latest",
 		"node-markdown" : "latest",
 		"request" : "latest",
-		"async" : "latest"
+		"async" : "latest",
+		"cluster" : "latest"
 	}
 }
