--- a/approot/package.json
+++ b/approot/package.json
@@ -5,7 +5,7 @@
 	"version" : "0.1.3",
 	"bugs" : "Andrew Maurer <amaurer@maurer.me>",
 	"engines" : {
-		"node" : "0.4.10"
+		"node" : "0.4.12"
 	},
 	"main" : "server.js",
 	"dependencies" : {
@@ -14,6 +14,7 @@
 		"node-markdown" : "latest",
 		"request" : "latest",
 		"async" : "latest",
-		"cluster" : "latest"
+		"cluster" : "latest",
+		"datetime" : "latest"
 	}
 }
